# gamagama-rmu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: add-to-project.yml
rulebooks/: README.md
rulebooks/core-law/chapters/: 00-preamble.md  01-1-introduction.md  02-character-law.md  03-arms-law.md  04-gamemaster-law.md
rulebooks/spell-law/chapters/: 00-preamble.md  01-1-1-rolemaster.md  02-2-magic.md  03-3-learning-spells.md  04-4-casting-spells.md  05-5-magical-rituals.md  06-6-channeling-spell-lists.md  07-7-essence-spell-lists.md  08-8-mentalism-spell-lists.md  09-9-hybrid-spell-lists.md
src/gamagama/rmu/: dice.py  system.py
tests/systems/: test_rmu.py
